hot fix: cors 에러 및 공통 에러 처리 문제 해결